# easy-ext

./: .deny.toml  .git-blame-ignore-revs  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  bors.toml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
ci/: azure-rustdoc.yml  azure-test.yml
src/: ast.rs  error.rs  iter.rs  lib.rs  quote.rs  to_tokens.rs
tests/: compiletest.rs  test.rs
tests/doc/: Cargo.toml
tests/run-pass/: associated_type_bounds.rs  const_generics_defaults.rs  const_trait_impl.rs  generic_associated_types.rs  impl_trait_in_assoc_type.rs  min_specialization.rs  min_type_alias_impl_trait.rs  specialization.rs  type_alias_impl_trait.rs  visibility.rs
tests/ui/: invalid.rs  invalid.stderr  maybe.rs  maybe.stderr  min_specialization.rs  min_specialization.stderr  visibility-1.rs  visibility-1.stderr  visibility-2.rs  visibility-2.stderr  visibility-3.rs  visibility-3.stderr  visibility.rs  visibility.stderr
