[package]
name = "easy-ext"
version = "0.2.6"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/easy-ext"
documentation = "https://docs.rs/easy-ext"
keywords = ["extension", "trait", "macros", "attribute"]
categories = ["no-std", "rust-patterns"]
exclude = ["/.*", "/scripts"]
description = """
An attribute macro for easily writing extension trait pattern.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["tests/doc"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1.0.56", features = ["full", "visit-mut"] }

[dev-dependencies]
rustversion = "1"
trybuild = "1"
