[package]
name = "easy-ext"
version = "1.0.1"
edition = "2018"
rust-version = "1.31"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/easy-ext"
keywords = ["extension", "trait", "macros", "attribute"]
categories = ["no-std", "rust-patterns"]
exclude = ["/.*", "/tools"]
description = """
An attribute macro for easily writing extension trait pattern.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["tests/doc"]

[lib]
proc-macro = true

[dev-dependencies]
async-trait = "0.1"
rustversion = "1"
trybuild = "1.0.49"
